--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ var url = '/scoreboard.php?red=' + document.getElementById('rednumber').value + 
 </TD>
 <TD ALIGN="CENTER" WIDTH="15%"
 <div class="hit-the-floor">Blue</div>
-<font color="#ffffff"><input type="text" id="bluenumber" value="0" size="1"></font>
+<br><font color="#ffffff"><input type="text" id="bluenumber" value="0" size="1"></font>
 </TD>
 <TD ALIGN="CENTER" BGCOLOR="BLUE" WIDTH="5%">
 <button class="button button-3d button-box button-jumbo" type="button"  onclick="incrementBlueValue();"><i class="fas fa-basketball-ball" aria-hidden="true"></i></button>
